objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Built_On__c</fullName>
        <label>Built On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>District</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Renovation__c</fullName>
        <formula>IF( Property_Age_Years__c &lt;= 5, &apos;&#128994;&apos;,
IF( ( Property_Age_Years__c &gt;=5 &amp;&amp; Property_Age_Years__c &lt;= 10) ,&apos;&#128992;&apos;,
IF(( Property_Age_Years__c &gt;= 10) , &apos;&#128308;&apos; ,NULL )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Renovation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Age_Years__c</fullName>
        <formula>YEAR( TODAY())- YEAR( Built_On__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Age(Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storey__c</fullName>
        <label>Storey</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>1BHK</fullName>
                </value>
                <value>
                    <fullName>2BHK</fullName>
                </value>
                <value>
                    <fullName>3BHK</fullName>
                </value>
                <value>
                    <fullName>4BHK</fullName>
                </value>
                <value>
                    <fullName>5BHK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Property ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propertys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>